# wgsl-fragment-editor

./: .gitignore  .npmignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  rollup.config.js
src/: app.rs  lib.rs  shader.wgsl  state.rs
src/graphics/: camera.rs  mod.rs  pipeline.rs  state.rs  surface.rs  vertex.rs
web/: shader-canvas.js  style.css
