[package]
name = "wgpu-shader-canvas"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.11.8"
log = "0.4"
wgpu = "26.0.1"
pollster = "0.4.0"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
bytemuck = "1.23.2"
cgmath = "0.18"

# Only include if we're targetting wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "26.0.1", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Performance",
]}